--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -137,7 +137,6 @@
 	}
 
 	&__text {
-		max-width: rem(950);
 		font-weight: 400;
 		font-size: 24px;
 		line-height: 36px;
@@ -150,12 +149,14 @@
 
 	&__items {
 		display: grid;
-		grid-template-columns: repeat(4, 270px);
+		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: 1fr;
 		gap: 50px;
 	}
 
 	&__item {
+		display: flex;
+		flex-direction: column;
 	}
 }
 .item-about {
@@ -179,12 +180,18 @@
 
 	&__button {
 		@extend %b3;
+		margin-top: auto;
+		align-self: start;
 	}
 }
 .item-about {
 	&__img {
-		display: flex;
-		justify-content: center;
+		img {
+			width: 56px;
+			height: 56px;
+		}
+		display: grid;
+		justify-items: center;
 		align-items: center;
 		&_van {
 			background-color: $pinkDark;
@@ -213,5 +220,174 @@
 			height: 70px;
 			border-radius: 50%;
 		}
+	}
+}
+
+.price {
+	&__title {
+		font-weight: 900;
+		font-size: 64px;
+		line-height: 77px;
+		&:not(:last-child) {
+			margin-bottom: em(20, 64);
+		}
+		text-align: center;
+	}
+
+	&__subtitle {
+		font-weight: 700;
+		font-size: 32px;
+		line-height: 48px;
+		color: $gray;
+		&:not(:last-child) {
+			margin-bottom: em(30, 32);
+		}
+		text-align: center;
+	}
+
+	&__sp {
+		position: relative;
+		color: $purpleDark;
+		&::after {
+			content: "";
+			position: absolute;
+			width: 135px;
+			height: 15px;
+			bottom: 0px;
+			left: -5px;
+			z-index: -10;
+			border-radius: 20px;
+			background-color: $yellowDark;
+		}
+	}
+
+	&__items {
+		display: flex;
+		justify-content: center;
+		gap: 30px;
+	}
+
+	&__item {
+		display: flex;
+		flex-direction: column;
+		border-radius: 16px;
+		transition: box-shadow 0.3s ease,;
+		padding: 32px;
+		margin-right: 30px;
+		cursor: pointer;
+		position: relative;
+		background-color: #fff;
+		&::after {
+			content: "";
+			position: absolute;
+			display: block;
+			width: 200px;
+			height: 130px;
+			background: url("@img/background/🎨 Wiggle.svg") center no-repeat;
+			bottom: -30px;
+			left: -30px;
+			z-index: -1;
+			opacity: 0;
+			
+		}
+		@media (any-hover: hover) {
+			&:hover {
+				box-shadow: 0px 8px 8px rgb(38, 50, 56, 0.12), 0px 16px 24px rgb(38, 50, 56, 0.8);
+				&::after {
+					content: "";
+					opacity: 1;
+					
+				}
+			}
+		}
+		span {
+			font-size: rem(48);
+			line-height: 56px;
+			font-weight: 700;
+		}
+	}
+}
+.item-price {
+	&_van {
+		p {
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 32px;
+				height: 32px;
+				background: url("@img/icons/Vc.svg") 10px 10px no-repeat;
+				left: 0px;
+				top: 5px;
+				background-color: #c2c2c2;
+				border-radius: 999px;
+			}
+		}
+	}
+
+	&_two {
+		p {
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 32px;
+				height: 32px;
+				background: url("@img/icons/Vc.svg") 10px 10px no-repeat;
+				left: 0px;
+				top: 5px;
+				background-color: $yellowDark;
+				border-radius: 999px;
+			}
+		}
+	}
+
+	&_three {
+		p {
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 32px;
+				height: 32px;
+				background: url("@img/icons/Vc.svg") 10px 10px no-repeat;
+				left: 0px;
+				top: 5px;
+				background-color: $GreenDark;
+				border-radius: 999px;
+			}
+		}
+	}
+
+	&__title {
+		color: $purpleDark;
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 32px;
+		&:not(:last-child) {
+			margin-bottom: em(10, 18);
+		}
+	}
+
+	&__prices {
+		font-weight: 700;
+		&:not(:last-child) {
+			margin-bottom: rem(15);
+		}
+	}
+
+	&__text {
+		padding-top: 10px;
+		margin-bottom: 30px;
+		padding-left: 40px;
+	}
+
+	&__button {
+		@extend %b3;
+		width: 227px;
+		display: flex;
+		justify-content: center;
+		margin-top: auto;
+		background-color: #fff;
 	}
 }
